--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
         </header>
         <main>
             <section>
-                <img src="Fotos/fotohome.png" width="500" alt="Devaria Olá Mundo"/>
+                <img src="Fotos/fotohome.png" width="500" alt="Devaria - Olá Mundo"/>
             </section>
         </main>
+        <footer>
+            <section>
+                <span>contato@devaria.com.br</span> <br />
+                <span>Conheça o nosso canal do Youtube!</span>
+            </section>
+        </footer>
     </body>
 </html>
