--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Olá Mundo</title>
+        <meta name="description" content="A Devaria é uma formação para pessoas que não possuem conhecimento em programação e querem se tornar um bom programador" />
+        <meta name="keywords" content="devaria,programação,aulas ao vivo, desenvimento de sistemas"/>
+        <meta name="author" content="Daniel Castello" />
+        <meta http-equiv="Refresh" content="300"
     </head>
     <body>
         <header>
@@ -12,12 +16,34 @@
                     <li><a href="index.html">Home</a> </li>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
+                    <li><a href="DevStars.html">DevStars</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section>
+                <figure>
                 <img src="Fotos/fotohome.png" width="500" alt="Devaria - Olá Mundo"/>
+                <figcaption>Foto de capa Devaria</figcaption>
+            </figure>
+            </section>
+            <!-- Video descontinuado
+            <section>
+                <div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/dcEvdxeWHAs" title="Apresentação" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+
+            </section>
+            -->
+            <section>
+                <video width="320" height="240" controls="controls">
+                    <source src="Videos/Anuncio.mp4" type="video/mp4">
+                </video>
+            </section>
+
+            <section>
+                <h3>Para que os <abbr title="Developers"> DEVs</abbr> fiquem sabendo, utilizamos <abbr title="Microsoft"> MS</abbr> Azure</h3>
+                <blockquote cite="https://azure.microsoft.com/pt-br/">Visualize e crie aplicativos inteligentes com as tecnologias mais recentes anunciadas no Microsoft Build</blockquote>
             </section>
         </main>
         <footer>
